--- a/19201103082.html
+++ b/19201103082.html
@@ -25,6 +25,7 @@
             font-weight: bold;
         }
 
+
         .shortMotivate {
             margin-right: 9em;
         }
@@ -34,12 +35,30 @@
         }
 
         .box {
+            margin-top: -8px;
+            width: 80%;
             height: 10px;
             border: 1px solid black;
         }
 
         .education {
             display: flex;
+            position: relative;
+
+
+        }
+
+        .eduTitle {
+            font-size: 26px;
+            margin-top: -1px;
+            position: relative;
+            left: 40px;
+            font-style: italic;
+
+        }
+
+        .institute {
+            margin-right: 80px;
         }
     </style>
 </head>
@@ -65,11 +84,18 @@
     <!-- education section -->
     <section class="education">
         <div>
+            <h3 class="eduTitle">Education</h3>
+        </div>
+
+        <hr>
+        <div class="institute">
+            <h3>Withering Madness University - Planet Vhoorl.
+                </h>
+                <p> <span>Major:</span> Public Relations</p>
+                <p> <span>Minor:</span> Scale Tendina</p>
 
         </div>
-        <div></div>
     </section>
-
 
 
 
