--- a/19201103082.html
+++ b/19201103082.html
@@ -41,24 +41,44 @@
             border: 1px solid black;
         }
 
-        .education {
+        .common-section {
             display: flex;
             position: relative;
 
 
         }
 
-        .eduTitle {
+        .title {
             font-size: 26px;
             margin-top: -1px;
             position: relative;
-            left: 40px;
+            left: 50px;
+
             font-style: italic;
 
         }
 
-        .institute {
-            margin-right: 80px;
+        .info {
+            padding-right: 400px;
+        }
+
+
+        .commonHR {
+            margin-top: -2px;
+
+
+        }
+
+        .office-info {
+            margin-left: -53px;
+            margin-right: 240px;
+        }
+
+        .box2 {
+            margin-top: 20px;
+            width: 80%;
+            height: 10px;
+            border: 1px solid black;
         }
     </style>
 </head>
@@ -74,7 +94,7 @@
         <p><span>Email:</span>rr4kib@gmail.com</p>
         <p class="shortMotivate">I am an outgoing and energetic (ask anybody) young professional,
             seeking a career that fits my professional skills, personality, and
-            murderous tendencies. My squid-like head is a masterful problem
+            murderous tendencies. <br> My squid-like head is a masterful problem
             solver and inspires fear in who gaze upon it. I can bring world
             domination to vour organization.</p>
     </header>
@@ -82,20 +102,44 @@
     <hr class="secondHR">
     <div class="box"></div>
     <!-- education section -->
-    <section class="education">
+    <section class="common-section">
         <div>
-            <h3 class="eduTitle">Education</h3>
+            <h3 class="title">Education</h3>
         </div>
 
-        <hr>
-        <div class="institute">
+        <hr class="commonHR">
+        <div class="info">
             <h3>Withering Madness University - Planet Vhoorl.
-                </h>
-                <p> <span>Major:</span> Public Relations</p>
-                <p> <span>Minor:</span> Scale Tendina</p>
+            </h3>
+            <p> <span>Major:</span> Public Relations</p>
+            <p> <span>Minor:</span> Scale Tendina</p>
 
         </div>
     </section>
+    <!-- end education section -->
+    <div class="box"></div>
+
+    <!-- skills section -->
+    <section class="common-section">
+        <div>
+            <h3 class="title">Skills</h3>
+        </div>
+
+        <hr class="commonHR">
+        <div class=" office-info">
+            <h3>Office</h3>
+            <p class="officeintro">Office and records management, database administration, event organization,
+                <br> customer support, travel coordination
+            </p>
+            <h3>Computer skills</h3>
+            <p>Microsoft productivity software (Word, Excel, etc), Adobe Creative Suite, Windows</p>
+        </div>
+    </section>
+    <!-- end skillls -->
+    <div class="box2"></div>
+
+    <!-- experience -->
+
 
 
 
