--- a/19201103082.html
+++ b/19201103082.html
@@ -80,6 +80,19 @@
             height: 10px;
             border: 1px solid black;
         }
+
+        .exp-title {
+            margin-right: 305px;
+        }
+
+        .hint {
+            position: absolute;
+            color: gray;
+            font-size: 15px;
+            right: -25px;
+            top: -4px;
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -139,7 +152,32 @@
     <div class="box2"></div>
 
     <!-- experience -->
+    <section class="common-section">
+        <div>
+            <h3 class="title">Experience</h3>
+        </div>
 
+        <hr class="commonHR">
+        <div class="exp-title">
+            <h3>Doomsday Cult
+            </h3>
+            <p class="hint">Leader/Overlord - Baton Rogue, LA - 1926-2010</p>
+            <ul>
+                <li>Inspired and won highest peasant death competition among servants</li>
+                <li>Helped coordinate managers to grow cult following</li>
+                <li>Provided untimely deaths to all who opposed</li>
+            </ul>
+            <h3>The Watering Hole
+            </h3>
+            <p class="hint">Bartender/Server - Milwaukee, WI - 2009</p>
+            <ul>
+                <li>Worked on grass-roots promotional campaigns</li>
+                <li>Reduced theft and property damage percentages</li>
+                <li>Janitorial work, Laundry</li>
+            </ul>
+        </div>
+
+    </section>
 
 
 
