--- a/19201103082.html
+++ b/19201103082.html
@@ -93,6 +93,23 @@
             top: -4px;
             font-weight: bold;
         }
+
+        .hint2 {
+            position: absolute;
+            color: gray;
+            font-size: 15px;
+            right: -1px;
+            top: 120px;
+            font-weight: bold;
+        }
+
+        .hobbies {
+            margin-right: 358px;
+        }
+
+        .ref {
+            margin-right: 660px;
+        }
     </style>
 </head>
 
@@ -169,19 +186,46 @@
             </ul>
             <h3>The Watering Hole
             </h3>
-            <p class="hint">Bartender/Server - Milwaukee, WI - 2009</p>
+            <p class="hint2">Bartender/Server - Milwaukee, WI - 2009</p>
             <ul>
                 <li>Worked on grass-roots promotional campaigns</li>
                 <li>Reduced theft and property damage percentages</li>
                 <li>Janitorial work, Laundry</li>
             </ul>
         </div>
-
     </section>
+    <!-- end experience section -->
+    <div class="box" style="margin-top: 20px;"></div>
+
+    <!-- hobbie section -->
+
+    <section class="common-section">
+        <div>
+            <h3 class="title">Hobbies</h3>
+        </div>
+
+        <hr class="commonHR">
+        <div class="hobbies">
+            <p class="">Office Word Domination, Deep Sea Diving, Nurder Most Foul
 
 
+        </div>
+    </section>
+    <!-- end hobbie -->
+    <div class="box"></div>
+    <section class="common-section">
+        <div>
+            <h3 class="title">References</h3>
+        </div>
 
+        <hr class="commonHR">
+        <div class="ref">
+            <p class="">Available on request
 
+        </div>
+    </section>
+    <div class="box"></div>
+    <hr class="secondHR" style="margin-top: -2px;">
 </body>
 
 </html>
